<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    android:backgroundTint="@color/md_theme_dark_onBackground"
    tools:context=".ui.dashboard.DashboardFragment">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_weight="1"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTime3"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/minmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintStart_toEndOf="@+id/editTextTime3"
        app:layout_constraintTop_toTopOf="@+id/editTextTime3" />

    <ImageButton
        android:id="@+id/minmenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime3"
        app:layout_constraintStart_toEndOf="@+id/editTextTime3" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-12dp"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="time"
        android:text="12"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Hora de La Alarma"
        app:layout_constraintStart_toStartOf="@+id/editTextTime2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Descripcion"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime2" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="380dp"
        android:layout_height="157dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/horamenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTime2"
        app:layout_constraintStart_toEndOf="@+id/editTextTime2" />

    <ImageButton
        android:id="@+id/horamas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintStart_toEndOf="@+id/editTextTime2"
        app:layout_constraintTop_toTopOf="@+id/editTextTime2" />


</androidx.constraintlayout.widget.ConstraintLayout>